# phoenix-jetson

./: .clang-format  .gitignore  .gitmodules  README.md  initial_setup.sh
src/phoenix/: CMakeLists.txt  package.xml
src/phoenix/include/: phoenix.hpp
src/phoenix/include/phoenix/: shared_memory.hpp  status_flags.hpp  stream_data.hpp
src/phoenix/launch/: all.py
src/phoenix/src/: adc3_main.cpp  ads1015.cpp  ads1015.hpp  avalon_mm.cpp  avalon_mm.hpp  avalon_st.cpp  avalon_st.hpp  battery_node.cpp  battery_node.hpp  command_main.cpp  command_node.cpp  command_node.hpp  diagnostics.cpp  diagnostics.hpp  epcq.cpp  epcq.hpp  gpio.cpp  gpio.hpp  i2c.cpp  i2c.hpp  spi.cpp  spi.hpp  stream_main.cpp  stream_node.cpp  stream_node.hpp  timestamp.hpp  uart.cpp  uart.hpp
src/phoenix_bridge/: CMakeLists.txt  package.xml
src/phoenix_bridge/src/: send_command.cpp
src/phoenix_gui/: CMakeLists.txt  package.xml
src/phoenix_gui/src/: controller.cpp  controller.hpp  controller.ui  gamepad_thread.cpp  gamepad_thread.hpp  main_window.cpp  main_window.hpp  main_window.ui  node_thread.hpp
src/phoenix_msgs/: CMakeLists.txt  package.xml
src/phoenix_msgs/msg/: StreamDataMotion.msg
